--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.11.2"
   }
 }
