--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "pg": "^8.11.2"
+    "pg": "^8.11.2",
+    "socket.io": "^4.7.2"
   }
 }
