--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-steam": "^1.0.18",
     "pg": "^8.11.2"
   }
 }
